--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div class="fixed text-white text-sm ml-2 mt-1 select-none">
+      <span>Score: </span>
+      <span id="scoreEl">0</span>
+    </div>
+
     <canvas></canvas>
 
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
       integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
