--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
       <span id="scoreEl">0</span>
     </div>
 
+    <div id="modalEl" class="fixed inset-0 flex items-center justify-center">
+      <div class="bg-white max-w-md w-full p-6 text-center">
+        <h1 id="bigScoreEl" class="text-4xl font-bold leading-none">0</h1>
+        <p class="text-sm text-gray-700 mb-4">Points</p>
+        <div>
+          <button
+            id="startGameBtn"
+            class="bg-blue-500 text-white w-full py-3 rounded-full"
+          >
+            Start Game
+          </button>
+        </div>
+      </div>
+    </div>
+
     <canvas></canvas>
 
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
