feat: add restart button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div>
           <button
             id="startGameBtn"
-            class="bg-blue-500 text-white w-full py-3 rounded-full"
+            class="bg-blue-500 text-white w-full py-3 rounded-full cursor-pointer"
           >
             Start Game
           </button>
