--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+
+    <script src="./js/eventListeners.js"></script>
+    <script src="./js/classes/Player.js"></script>
+    <script src="./js/classes/Enemy.js"></script>
+    <script src="./js/classes/Particle.js"></script>
+    <script src="./js/classes/Projectile.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
